name:           dbcleaner-core
version:        0.1.0
-- synopsis:
-- description:
license:        MIT
license-file:   LICENSE
author:         Sebastián Estrella
maintainer:     sebas007estrella@gmail.com
category:       Database
build-type:     Simple
cabal-version:  >= 1.10

library
  exposed-modules:  Database.DBCleaner
                  , Database.DBCleaner.Types
  build-depends:    base >= 4.4 && < 4.9
  hs-source-dirs:   src
  default-language: Haskell2010
